# sudoku-solver

./: README.md  lint.sh  pyproject.toml
puzzles/: easy_01.txt  easy_02.txt  easy_03.txt  expert_01.txt  expert_02.txt  expert_03.txt  intermediate_01.txt  intermediate_02.txt  intermediate_03.txt  jellyfish.txt  locked_candidates.txt  swordfish_01.txt  swordfish_02.txt  swordfish_03.txt  swordfish_04.txt  swordfish_05.txt  very_easy_01.txt  very_easy_02.txt  very_easy_03.txt
src/: __main__.py  runner.py  solver.py
src/model/: __init__.py  cell.py  grid.py
src/rules/: __init__.py  fish_rules.py  hidden_set_rules.py  locked_candidates_rule.py  naked_set_rules.py  set_cell_value.py  single_candidate_rule.py  single_candidate_solver.py  wing_rules.py
src/utils/: __init__.py  grid_rendering.py
test/: test_solver.py
test/model/: test_cell.py  test_grid.py
test/rules/: test_locked_candidates_rule.py  test_single_candidate_rule.py
tests/: test_runner.py  test_solver.py
tests/model/: test_cell.py  test_grid.py
tests/rules/: test_fish_rules.py  test_hidden_set_rules.py  test_naked_set_rules.py  test_set_cell_value.py  test_single_candidate_rule.py  test_wing_rules.py
tests/utils/: test_grid_rendering.py
