[project]
name = "sudoku-solver"
version = "0.1.0"
description = "A Sudoku solver which applies rules the same way a human would."
authors = [
    {name = "Stuart McHattie"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [
    {include = "model", from = "src"},
]

[tool.poetry.scripts]
sudoku-solver = "src.__main__:main"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
