[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sudoku-solver"
version = "0.1.0"
description = "A Sudoku solver which applies rules the same way a human would."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=11.3.0",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]

[project.scripts]
sudoku-solver = "runner:run"
